添加按钮设置图片，其他优化
